# QControlPro

./: CMakeLists.txt  README.md  vcpkg.json
cmakes/: importModules.cmake  importO3rd.cmake  importSources.cmake
include/: MainObject.h
modules/MainWindow/: CMakeLists.txt
modules/MainWindow/include/: MainWindow.h  MoveWidget.h  TitleBarButton.h
modules/MainWindow/resources/: QToolButton.css  QWidget.css
modules/MainWindow/src/: MainWindow.cpp  MoveWidget.cpp  TitleBarButton.cpp
modules/WidgetFrame/: CMakeLists.txt
modules/WidgetFrame/include/: GlobalGeneral.h  MouseHandle.h  Threshold.h  TitleWidget.h  WidgetFrame.h
modules/WidgetFrame/resources/: QToolButton.css
modules/WidgetFrame/resources/css/: QToolButton.css
modules/WidgetFrame/src/: MouseHandle.cpp  TitleWidget.cpp  WidgetFrame.cpp
modules/WidgetManager/: CMakeLists.txt
modules/WidgetManager/include/: WidgetManager.h
modules/WidgetManager/src/: WidgetManager.cpp
resources/application/: appicon.rc
source/include/: MainObject.h
source/src/: MainObject.cpp  main.cpp
src/: MainObject.cpp  main.cpp
views/: CMakeLists.txt
views/MainWidget/: MainWidget.cpp  MainWidget.h
